--- a/src/main/res/values-zh-rCN/strings.xml
+++ b/src/main/res/values-zh-rCN/strings.xml
@@ -7,8 +7,12 @@
     <string name="enable_listener">启用通知监听服务</string>
 
     <string name="label_permmit_float">允许悬浮窗</string>
+    <string name="label_permmit_float_summary">显示悬浮窗显示通知</string>
 
     <string name="label">通知监听服务</string>
+
+    <string name="label_auto_open_msg">自动查看应用消息</string>
+    <string name="label_auto_open_msg_summary">自动打开通知应用</string>
 
     <string name="instruction">\"通知提醒\"会把状态栏通知显示到悬浮窗中。\n\n相关操作：\n\n（1）单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;击：查看通知内容\n\n（2）上下滑动：切换多个通知\n\n（3）向右滑动：清空所有通知\n\n（4）向左滑动：删除当前通知</string>
 </resources>
