--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -11,11 +11,12 @@
     <string name="label">Notification Listener</string>
 
     <string name="label_auto_open_msg">Automatic open message</string>
-    <string name="label_auto_open_msg_summary">自动打开通知应用</string>
+    <string name="label_auto_open_msg_summary">Open the App automatic</string>
 
     <string name="instruction">\'Notification Reminder\' will show APP notifications in a float window.\nFuctions：\n（1）single click: open notification\n（2）fling up and down: switch app\n（3）fling to left：clear current notifications\n(4)fling to right: clear all notifications</string>
 
-    <string name="key_active_listener">key_active_listener</string>
-    <string name="key_float_view">key_float_view</string>
-    <string name="key_auto_open_msg">key_auto_open_msg</string>
+    <string name="key_active_listener" translatable="false">key_active_listener</string>
+    <string name="key_float_view" translatable="false">key_float_view</string>
+    <string name="key_auto_open_msg" translatable="false">key_auto_open_msg</string>
+    <string name="key_open_everywhere" translatable="false">key_open_everywhere</string>
 </resources>
