--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -6,12 +6,15 @@
     <string name="enable_listener">Activate Notification Listener</string>
 
     <string name="label_permmit_float">Allow float view</string>
-    <string name="label_permmit_float_summary">显示悬浮窗显示通知</string>
+    <string name="label_permmit_float_summary">Allow to show the message in float window</string>
 
     <string name="label">Notification Listener</string>
 
     <string name="label_auto_open_msg">Automatic open message</string>
     <string name="label_auto_open_msg_summary">Open the App automatic</string>
+
+    <string name="label_click_vibrator">单击振动</string>
+    <string name="label_click_vibrator_summary">单击悬浮窗时有振动效果</string>
 
     <string name="instruction">\'Notification Reminder\' will show APP notifications in a float window.\nFuctions：\n（1）single click: open notification\n（2）fling up and down: switch app\n（3）fling to left：clear current notifications\n(4)fling to right: clear all notifications</string>
 
@@ -19,4 +22,5 @@
     <string name="key_float_view" translatable="false">key_float_view</string>
     <string name="key_auto_open_msg" translatable="false">key_auto_open_msg</string>
     <string name="key_open_everywhere" translatable="false">key_open_everywhere</string>
+    <string name="key_click_vibrator" translatable="false">key_click_vibrator</string>
 </resources>
