--- a/src/main/res/values-zh-rCN/strings.xml
+++ b/src/main/res/values-zh-rCN/strings.xml
@@ -11,10 +11,10 @@
 
     <string name="label">通知监听服务</string>
 
-    <string name="label_auto_open_msg">仅桌面时自动打开应用消息</string>
+    <string name="label_auto_open_msg">仅在桌面自动查看消息</string>
     <string name="label_auto_open_msg_summary"></string>
 
-    <string name="label_open_everywhere">允许任何界面自动打开应用消息</string>
+    <string name="label_open_everywhere">任何界面自动查看消息</string>
     <string name="label_open_everywhere_summary"></string>
 
     <string name="label_click_vibrator">单击振动</string>
@@ -22,5 +22,5 @@
 
     <string name="instruction">\"通知提醒\"会把状态栏通知显示到悬浮窗中。\n\n相关操作：\n\n（1）单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;击：查看通知内容\n\n（2）上下滑动：切换多个通知\n\n（3）向右滑动：清空所有通知\n\n（4）向左滑动：删除当前通知</string>
 
-    <string name="label_always_show_float_view">悬浮窗一直显示</string>
+    <string name="label_always_show_float_view">显示默认悬浮窗</string>
 </resources>
