--- a/src/main/res/values-zh-rCN/strings.xml
+++ b/src/main/res/values-zh-rCN/strings.xml
@@ -23,4 +23,6 @@
     <string name="instruction">\"通知提醒\"会把状态栏通知显示到悬浮窗中。\n\n相关操作：\n\n（1）单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;击：查看通知内容\n\n（2）上下滑动：切换多个通知\n\n（3）向右滑动：清空所有通知\n\n（4）向左滑动：删除当前通知</string>
 
     <string name="label_always_show_float_view">显示默认悬浮窗</string>
+
+    <string name="label_record_ongoing_msg">关注持久消息</string>
 </resources>
