--- a/src/main/res/values-zh-rCN/strings.xml
+++ b/src/main/res/values-zh-rCN/strings.xml
@@ -27,4 +27,8 @@
     <string name="label_record_ongoing_msg">关注持久消息</string>
 
     <string name="label_smart_open_app">智能打开应用</string>
+    <string name="label_smart_open_app_summary">智能打开应用</string>
+
+    <string name="label_display_often_open_icon">显示常用应用图标</string>
+    <string name="label_display_often_open_icon_summary">没有通知消息时，悬浮窗将显示常用应用图标</string>
 </resources>
