--- a/src/main/res/values-zh-rCN/strings.xml
+++ b/src/main/res/values-zh-rCN/strings.xml
@@ -1,34 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">通知提醒</string>
-    <string name="start_service">允许悬浮窗</string>
-    <string name="stop_service">禁止悬浮窗</string>
-    <string name="enable_listener">启用通知监听服务</string>
+    <string name="label">通知监听服务</string>
+    <string name="instruction">\"通知提醒\"会把状态栏通知显示到悬浮窗中。\n\n相关操作：\n\n（1）单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;击：查看通知内容\n\n（2）上下滑动：切换多个通知\n\n（3）向右滑动：清空所有通知\n\n（4）向左滑动：删除当前通知</string>
+
+    <string name="label_enable_listener">激活通知监听服务</string>
+    <string name="label_enable_listener_summary">激活服务后才能正常使用所有功能</string>
 
     <string name="label_permmit_float">允许悬浮窗</string>
-    <string name="label_permmit_float_summary"></string>
-
-    <string name="label">通知监听服务</string>
+    <string name="label_permmit_float_summary">非锁屏状态界面上将显示悬浮窗，双击它即可查看对应的通知消息</string>
 
     <string name="label_auto_open_msg">仅在桌面自动查看消息</string>
     <string name="label_auto_open_msg_summary"></string>
 
-    <string name="label_open_everywhere">任何界面自动查看消息</string>
-    <string name="label_open_everywhere_summary"></string>
-
-    <string name="label_click_vibrator">单击振动</string>
-    <string name="label_click_vibrator_summary"></string>
-
-    <string name="instruction">\"通知提醒\"会把状态栏通知显示到悬浮窗中。\n\n相关操作：\n\n（1）单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;击：查看通知内容\n\n（2）上下滑动：切换多个通知\n\n（3）向右滑动：清空所有通知\n\n（4）向左滑动：删除当前通知</string>
+    <string name="label_open_everywhere">自动查看消息</string>
+    <string name="label_open_everywhere_summary">有新的通知消息时，自动跳转到消息界面</string>
 
     <string name="label_always_show_float_view">显示默认悬浮窗</string>
+    <string name="label_always_show_float_view_summary">没有通知消息时，显示默认悬浮窗</string>
 
     <string name="label_record_ongoing_msg">关注持久消息</string>
+    <string name="label_record_ongoing_msg_summary">统计常驻状态栏的消息</string>
 
     <string name="label_smart_open_app">智能打开应用</string>
-    <string name="label_smart_open_app_summary">智能打开应用</string>
+    <string name="label_smart_open_app_summary">双击默认悬浮窗即可打开最常使用的应用</string>
 
     <string name="label_display_often_open_icon">显示常用应用图标</string>
-    <string name="label_display_often_open_icon_summary">没有通知消息时，悬浮窗将显示常用应用图标</string>
+    <string name="label_display_often_open_icon_summary">最常使用应用的图标将显示在默认悬浮窗</string>
 </resources>
