--- a/src/main/res/values-zh-rCN/strings.xml
+++ b/src/main/res/values-zh-rCN/strings.xml
@@ -2,6 +2,8 @@
 <resources>
     <string name="app_name">通知提醒</string>
     <string name="label">通知监听服务</string>
+    <string name="accessibility_service_description"></string>
+
     <string name="instruction">\"通知提醒\"会把状态栏通知显示到悬浮窗中。\n\n相关操作：\n\n（1）单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;击：查看通知内容\n\n（2）上下滑动：切换多个通知\n\n（3）向右滑动：清空所有通知\n\n（4）向左滑动：删除当前通知</string>
 
     <string name="label_enable_listener">激活通知监听服务</string>
