--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="accessibility_service_description"></string>
     <string name="instruction">\'Notification Reminder\' will show APP notifications in a float window.\nFunctions：\n（1）single click: open notification\n（2）fling up and down: switch app\n（3）fling to left：clear current notifications\n(4)fling to right: clear all notifications</string>
 
-    <string name="label_permmit_float">Allow float view</string>
-    <string name="label_permmit_float_summary"></string>
+    <string name="label_permit_float">Allow float view</string>
+    <string name="label_permit_float_summary">Allow float view to show message</string>
 
     <string name="label_auto_open_msg">Automatic open message</string>
     <string name="label_auto_open_msg_summary"></string>
